--- a/words-are-power/package.json
+++ b/words-are-power/package.json
@@ -1,14 +1,18 @@
 {
   "name": "words-are-power",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "homepage": "https://chelseaholley92.github.io/words-are-power",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
     "lint": "eslint .",
     "preview": "vite preview"
-  },
+  }
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -22,7 +26,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
-}
+
