--- a/words-are-power/package.json
+++ b/words-are-power/package.json
@@ -8,11 +8,10 @@
     "dev": "vite",
     "build": "vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
-    "lint": "eslint .",
+    "deploy": "gh-pages -d dist",
+     "lint": "eslint .",
     "preview": "vite preview"
-  }
+  },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -30,4 +29,5 @@
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
+}
 
